[jOOQ/jOOQ#9506] Java 8 support